--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-stream = { version = "0.1.14", features = ["full"] }
+tokio-util = { version = "0.7.10", features = ["codec", "io", "full"] }
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
 warp = "0.3.6"
