--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 futures = "0.3.29"
 log = "0.4.20"
+once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
