--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,6 +13,8 @@ wasm-bindgen-futures = "0.4.39"
 log = "0.4.20"
 serde = { version = "1.0.193", features = ["derive"] }
 ewebsock = "0.4.0"
+uuid = { version = "1.6.1", features = ["v4", "serde", "js"] }
+chrono = "0.4.31"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
