--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -18,3 +18,6 @@ chrono = "0.4.31"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
+
+[profile.release]
+opt-level = "s"
