--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,3 +18,4 @@ tokio-stream = { version = "0.1.14", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["codec", "io", "full"] }
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
 warp = "0.3.6"
+regex = "1.10.2"
